added favicon andimage to homepage

--- a/series/diving-into-golang/index.html
+++ b/series/diving-into-golang/index.html
@@ -29,6 +29,7 @@
 
     <meta name="theme-color" content="#3372DF">
 
+    <link rel="shortcut icon" href="/images/favicon.ico" type="images/x-icon" />
     
     
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -54,6 +55,10 @@
  
     <header class="header">
     <div>
+        <div style="clear:both"></div>
+        <div class="me">
+            <img src="/images/me.png"/>
+        </div>
         <h1 class="huge underlined"><a>Diving Into Golang</a></h1>
       <div class="header-about-tags">
         <small>Programmer</small> |
